--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es"><head>
     <meta charset="UTF-8">
-    <title> Cursos de Alura </title>
+    <title> Alan - Cursos de Alura </title>
 </head>
 <body>
     <ul>
