--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <li> Docker </li>
         <li> Ansible </li>
         <li> Integración </li>
+        <li>NUEVA MODIFICACIÓN DE LISTA</li>
     </ul>
 
 </body></html>
