modificación de titulo curso de integración continua

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <li> Vagrant </li>
         <li> Docker </li>
         <li> Ansible </li>
-        <li> Integración </li>
+        <li> Integración Continua: Madurez y Productividad en el desarrollo de software</li>
         <li>NUEVA MODIFICACIÓN DE LISTA</li>
     </ul>
 
